# cmtraceopen

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Launch-CMTraceOpen.sh  README.md  SECURITY.md  package-lock.json  package.json  vitest.config.ts  windows_build_from_source.md
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cmtrace-ci.yml  cmtrace-release.yml  codesign.yml  winget-publish.yml
docs/design-system/: OPEN-QUESTIONS.md
docs/mockups/: approach-a-full.html  tab-approaches.html
docs/plans/: 2026-03-23-deployment-workspace-design.md  2026-03-23-error-lookup-redesign-design.md  2026-03-23-msi-parser-and-deployment-sources-design.md  2026-03-23-workspace-dropdown-and-log-tabs-design.md  2026-03-23-workspace-dropdown-and-log-tabs-impl.md  deployment-workspace-mockup.html
references/: emm-metadata-ingestion-design_1.md
references/platform/: phase-1-parser-extraction.md
scripts/: Install-CMTraceOpenBuildPrereqs.ps1  Launch-CMTraceOpen.ps1
scripts/collection/: Collect-DnsDhcpFromDomain.ps1
src/: main.tsx  test-setup.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  tauri.lite.conf.json
src-tauri/benches/: intune_pipeline.rs  timeline.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-lite/: icon.icns
src-tauri/installer/: package.signed.json
src-tauri/src/: constants.rs  error.rs  graph_api.rs  ipc_bridge.rs  lib.rs  menu.rs  process_util.rs
src-tauri/src/collector/: artifacts.rs  engine.rs  env_expand.rs  manifest.rs  mod.rs  profile.rs  profile_data.json  types.rs
src-tauri/src/commands/: app_config.rs  bundle_ops.rs  collector.rs  deployment.rs  dns_dhcp.rs  dsregcmd.rs  file_association.rs  file_ops.rs  filter.rs  graph_api.rs  intune.rs  intune_bundle.rs  intune_diagnostics.rs  known_sources.rs  macos_diag.rs  mod.rs  parsing.rs  registry_ops.rs  secureboot.rs  system_preferences.rs  timeline.rs
src-tauri/src/dsregcmd/: connectivity.rs  derive.rs  event_logs.rs  extended.rs  mod.rs  parser.rs  rules.rs
src-tauri/src/error_db/: codes.rs  lookup.rs
src-tauri/src/event_log/: commands.rs  live.rs  models.rs  parser.rs
src-tauri/src/intune/: download_stats.rs  event_tracker.rs  eventlog_win32.rs  evtx_parser.rs  guid_registry.rs  ime_parser.rs  mod.rs  models.rs  policy_parser.rs  timeline.rs
src-tauri/src/macos_diag/: defender.rs  environment.rs  mod.rs  models.rs  packages.rs  profiles.rs  unified_log.rs
src-tauri/src/models/: log_entry.rs
src-tauri/src/parser/: burn.rs  cbs.rs  ccm.rs  cmtlog.rs  detect.rs  dhcp.rs  dism.rs  dns_audit.rs  dns_debug.rs  dns_types.rs  iis_w3c.rs  intune_macos.rs  mod.rs  msi.rs  panther.rs  patchmypc_detection.rs  plain.rs  psadt.rs  reporting_events.rs  secureboot_log.rs  severity.rs  simple.rs  timestamped.rs
src-tauri/src/secureboot/: log_parser.rs  mod.rs  models.rs  rules.rs  scanner.rs  scripts.rs  stage.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/sysmon/: evtx_parser.rs
src-tauri/src/timeline/: builder.rs  correlation.rs  incidents.rs  mod.rs  models.rs  query.rs  store.rs
src-tauri/src/watcher/: tail.rs
src-tauri/tests/: bench_parse.rs  dns_audit_real.rs  dns_debug_real.rs  parser_expanded_corpus.rs  parser_regression_corpus.rs  timeline_integration.rs
src-tauri/tests/corpus/plain/: unstructured.txt
src/hooks/: use-app-menu.ts  use-collection-progress-listener.ts  use-collection-progress.ts  use-context-menu.ts  use-drag-drop.ts  use-keyboard.ts  use-quick-stats.ts
src/lib/: collection-categories.ts  column-config.test.ts  column-config.ts  commands.ts  constants.ts  date-time-format.ts  errors.ts  file-paths.ts  guid-name-map.ts  log-accessibility.ts  log-source.ts  merge-entries.ts  profile-utils.ts  (+1 more)
(+139 files in other folders)
