[package]
name = "cmtrace-open"
version = "1.0.3"
description = "Open-source CMTrace log viewer with Intune diagnostics"
authors = ["Adam Gell"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["full"]
full = ["collector", "deployment", "dsregcmd", "intune-diagnostics", "macos-diag"]
collector = []
deployment = []
dsregcmd = ["dep:ureq", "intune-diagnostics"]
intune-diagnostics = ["dep:evtx"]
macos-diag = ["dep:plist"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
log = "0.4"
thiserror = "2"
notify = "7"
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt"] }
rayon = "1.10"
font-kit = "0.14"
evtx = { version = "0.8", optional = true }
glob = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
plist = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_Security"] }
ureq = { version = "2", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
plist = "1"

[[bench]]
name = "intune_pipeline"
harness = false
required-features = ["intune-diagnostics"]
